# opengl

./: CMakeLists.txt
assets/shaders/: basic_vertex_shader.vert
src/: main.cpp
src/utils/opengl/: Camera.cpp  Camera.hpp  EBO.cpp  EBO.hpp  Shader.cpp  Shader.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
